--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,7 @@
 Options -Indexes
-Deny from  all
+Options +FollowSymLinks 
+
+RewriteEngine On 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule !\.(js|ico|gif|jpg|png|css)$ /index.php [L]
