--- a/.htaccess
+++ b/.htaccess
@@ -4,4 +4,4 @@ Options +FollowSymLinks
 RewriteEngine On 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule !\.(js|ico|gif|jpg|png|css)$ /index.php [L]
+RewriteRule !\.(js|ico|gif|jpg|png|css)$ index.php [L]
