--- a/lib/bin/DB.ini
+++ b/lib/bin/DB.ini
@@ -1,6 +1,6 @@
 [localhost]
 host=localhost
-username=root
+username=vhost
 password=123456
 dbname=raannuch_co_uk
 set=UTF8
@@ -9,5 +9,5 @@ set=UTF8
 host=localhost
 username=root
 password=123456
-dbname=timetable
+dbname=raannuch_co_uk
 set=UTF8
