Update path $_SERVER["doucment_root"]

--- a/lib/bin/DB.ini
+++ b/lib/bin/DB.ini
@@ -6,8 +6,9 @@ dbname=raannuch_co_uk
 set=UTF8
 
 [server]
-host=localhost
-username=root
+host=raannuchcouk.ipagemysql.com
+username=raannuch
 password=123456
-dbname=raannuch_co_uk
+dbname=touno_raannuch
 set=UTF8
+
